<?xml version="1.0"?>
<package format="2">
  <name>eigen_catkin</name>
  <version>0.0.301</version> 
  <description>eigen_catkin</description>
  <maintainer email="schneith@ethz.ch">Thomas Schneider</maintainer>
  <author>ASL</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>cmake_external_project_catkin</build_depend>
</package>
